Fix z-index for buildings.

--- a/modules/css/layout.playerBoard.scss
+++ b/modules/css/layout.playerBoard.scss
@@ -111,6 +111,7 @@
 
           .caverna-building {
             position: absolute;
+            z-index: 2;
           }
 
           .stable-holder {
